added buildDomString function that prints cards to the index page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="diary"></div>
+  <div id="card-holder"></div>
   <script src="main.js"></script>
 </body>
 </html>
