input prints to the console on the event listener

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
   <div id="card-holder"></div>
+  
+  <div id="main-output">
+    <h2>Place</h2>
+    <p class="output"></p>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
