finished basic functions and css

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <title>Document</title>
 </head>
 <body>
+  <h1 class="main-heading">Travel Diary</h1>
   <div id="card-holder"></div>
-  
+
   <div id="main-output">
-    <h2>Place</h2>
-    <p class="output"></p>
+
+    
   </div>
   <script src="main.js"></script>
 </body>
